# legistar-rs

./: Cargo.toml  README.md
src/: client.rs  main.rs
src/resources/: mod.rs
src/resources/events/: event.rs  event_item.rs  mod.rs
src/resources/types/: bodytype.rs  mattertype.rs  mod.rs  votetype.rs
