[package]
name = "legistar"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3", features = ["parsing", "serde", "serde-well-known", "macros"] }
tokio = { version = "1.x", features = ["full"] }
